test/io/console/test_io_console.rb
@@ -317,6 +317,11 @@ defined?(IO.console) and TestIO_Console.class_eval do
     def test_set_winsize_console
       s = IO.console.winsize
       assert_nothing_raised(TypeError) {IO.console.winsize = s}
+      bug = '[ruby-core:82741] [Bug #13888]'
+      IO.console.winsize = [s[0], s[1]+1]
+      assert_equal([s[0], s[1]+1], IO.console.winsize, bug)
+      IO.console.winsize = s
+      assert_equal(s, IO.console.winsize, bug)
     end
 
     def test_close
